@@ -4,6 +4,8 @@ Upcoming:
 - It is now possible to configure the leaves rubble and the random dirt/stone rubble you get in the city style (generalsettings)
 - Cleaned up some biome settings that aren't implemented. If they have to be redone it will be with another mod
 - City spheres are back!
+- Better API for sphere checking
+- Forcing spawn works better now
 
 1.19-6.0.5:
 - SandTechnology fixed a bug on space type worlds (void worlds) with a potential crash
